# dep-nudge

./: .gitignore  README.md  pyproject.toml
dep_nudge/: __init__.py  audit.py  audit_report.py  baseline.py  cache.py  checker.py  cli.py  delta.py  filter.py  formatter.py  ignore.py  ignore_integration.py  parser.py  pin.py  report.py  summary.py  trend.py  upgrade.py  vulnerability.py
tests/: test_audit.py  test_audit_report.py  test_baseline.py  test_baseline_integration.py  test_cache.py  test_checker.py  test_cli.py  test_delta.py  test_delta_integration.py  test_filter.py  test_formatter.py  test_formatter_integration.py  test_ignore.py  test_ignore_integration.py  test_parser.py  test_pin.py  test_pin_integration.py  test_summary.py  test_trend.py  test_upgrade.py  test_upgrade_integration.py  test_vulnerability.py
