[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dep-nudge"
version = "0.1.0"
description = "Scan requirements files and flag outdated or vulnerable packages with upgrade suggestions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["dependencies", "requirements", "outdated", "packages"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "packaging>=23.0",
]

[project.scripts]
dep-nudge = "dep_nudge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["dep_nudge"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
